--- a/project2.html
+++ b/project2.html
@@ -78,9 +78,17 @@ Project Description: ...
         /*  myScore; (int)
             theirScore; (int)
             winOrLoss; (string- W or L)
-        /*
+        
         This class should have a constructor that recieves all 3 parameters to populate the attributes
             (myScore, theirScore, winOrLoss)
+        */
+
+
+        /*function playGame()
+        {
+
+        }
+        */
 
 /*
 When the user clicks on the Play Game button you need to simulate an entire season.
