--- a/project2.html
+++ b/project2.html
@@ -244,6 +244,14 @@ Project Description: ...
                             { oppOutcome = "W"; }
 
                         teamObjects[iInner].games.push(new Game(oppScore, ourScore, oppOutcome));
+                        /*When the game is over you will update the totalPointsFor and the totalPointsAgainst attributes 
+                        by calling the methods (NOT using the attribute).
+
+                        You will also update the wins and the losses for each team as a game is completed. 
+                        You will call the calcWinLossPct method to update the winLossPct attribute.
+
+                        You will also need to add a new game object to the games attribute for the team and make sure the constructor 
+                        is appropriately called to populate myScore, theirScore, and winOrLoss. */
 
 
 
