--- a/project2.html
+++ b/project2.html
@@ -268,6 +268,30 @@ Project Description: ...
                             { oppOutcome = "W"; }
 
                         teamObjects[iInner].games.push(new Game(oppScore, ourScore, oppOutcome));
+
+
+                        //Bubble sort
+                        var sHoldTeam;
+                        var iHoldWins;
+                        for (i1 = 0; i1 < wccTeams.length - 1; i1++)
+                        {
+                            for (i2 = i1 + 1; i2 < wccTeams.length; i2++)
+                            {
+                                if (teamObjects.wins[i1] < teamObjects.wins[i2])
+                                {
+                                    iHoldWins = teamObjects.wins[i2];
+                                    sHoldTeam = teamObjects.teamName[i2];
+
+                                    teamObjects.wins[i2] = teamObjects.wins[i1];
+                                    teamObjects.teamName[i2] = teamObjects.teamName[i1];
+
+                                    teamObjects.wins[i1] = iHoldWins;
+                                    teamObjects.teamName[i1] = sHoldTeam;
+                                }
+                            }
+                        }
+
+                        document.getElementById("output").innerHTML = teamObjects.join('').teamName.wins;
                         
                         /*When the game is over you will update the totalPointsFor and the totalPointsAgainst attributes 
                         by calling the methods (NOT using the attribute).
