bubble sort display

--- a/project2.html
+++ b/project2.html
@@ -318,7 +318,7 @@ Project Description: ...
                 }
             }
 
-            document.getElementById("output").innerHTML = teamObjects.join('').teamName;
+            document.getElementById("output").innerHTML = teamObjects;
         }
 
 
