CSS: Fixed proportions and Images
Changed file location of images to a folder. Also, added new images to spice things up.

--- a/project2.html
+++ b/project2.html
@@ -24,8 +24,9 @@ Project Description: ...
             #C9082A - red
             #FFFFFF - white
             */
-            background-image: url("wooden-basketball-court-wallpaper-mural.jpg");
+            background-image: url("/Basketball Images/wooden-basketball-court-wallpaper-mural.jpg");
             background-size:cover;
+            
         }
 
         #intro
@@ -41,12 +42,12 @@ Project Description: ...
         .teams
         {
             background-color: #17408B;
-            width: 40%;
+            width: 32%;
             font-family: Arial, Helvetica, sans-serif;
             font-size: larger;
             font-weight: bold;
             color: white;
-            margin-left: 10px;
+            margin-left: 2%;
             padding: 10px;
             float: left;
             display: block;
@@ -67,14 +68,14 @@ Project Description: ...
         #inputButton
         {
             float: left;
-            width: 30%;
+            width: 29.5%;
             vertical-align: middle;
             height: auto;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 35%;
-            margin-left: 15%;
+            margin-left: 0%;
         }
 
         input
@@ -85,8 +86,10 @@ Project Description: ...
         #rightSide
         {
             float: left;
-            width: 15%;
-            height: 35%;
+            width: 32%;
+            height: 32%;
+            border: solid black 3px;
+            padding: 10px;
         }
 
     </style>
@@ -128,6 +131,10 @@ Project Description: ...
             <p>Season Results:</p>
             <p id="output"></p>  
         </div>
+    </div>
+    <div id="basketballImg">
+        <img src="/Basketball Images/ncaa logo image.png" alt="NCAA">
+        <img src="/Basketball Images/plain basketball.png" alt="Basketball">
     </div>
     <footer>
         Footer Test
