--- a/project2.html
+++ b/project2.html
@@ -33,6 +33,9 @@ Project Description: ...
         {
             text-align: center;
             margin-top: 60px;
+            font-family: Arial, Helvetica, sans-serif;
+            color: #17408B;
+            font-weight: bolder;
         }
 
         #mainContainer
@@ -44,7 +47,7 @@ Project Description: ...
         {
             border: solid black 3px;
             background-color: #17408B;
-            width: 31%;
+            width: 29%;
             font-family: Arial, Helvetica, sans-serif;
             font-size: larger;
             font-weight: bold;
@@ -53,13 +56,7 @@ Project Description: ...
             padding: 10px;
             float: left;
             display: block;
-        }
-
-        li
-        {
-            font-size: medium;
-            font-weight: normal;
-            list-style: circle;
+            height: 40%;
         }
 
         #teamList
@@ -72,14 +69,16 @@ Project Description: ...
             font-family: fantasy;
             font-size: x-large;
             float: left;
-            width: 30%;
+            width: 28.5%;
             vertical-align: middle;
             height: auto;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 10%;
-            margin-left: 0%;
+            margin-left: 1%;
+            margin-top: 8%;
+            margin-right: 1%;
         }
 
         input
@@ -91,15 +90,41 @@ Project Description: ...
         {
             border: solid black 3px;
             background-color: #B22234;
-            width: 31%;
+            width: 29%;
             font-family: Arial, Helvetica, sans-serif;
             font-size: larger;
             font-weight: bold;
             color: white;
-            margin-right: 4%;
             padding: 10px;
-            float: right;
+            float: left;
             display: block;
+            height: 40%;
+            
+        }
+
+        #ballImg
+        {
+            margin-top: 3%;
+            margin-left: 14%;
+            height: 250px;
+        }
+
+        #ncaaImg
+        {
+            margin-top: 3%;
+            margin-left: 26%;
+            height: 250px;
+        }
+
+        footer
+        {
+            width: 100%;
+            background-color: #B22234;
+            padding: 10px;
+            text-align: center;
+            margin-top: 5%;
+            color: white;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
     </style>
@@ -108,7 +133,8 @@ Project Description: ...
     <!--Top Intro Code-->
     <div id="intro">
         <h1>Welcome to Basketball Season Simulator!</h1>
-        <h3>Instructions</h3>
+        <br>
+        <h3>Instructions:</h3>
         <h4>Pick a team to root for from the list, click the "Play Game" button, and see how well your team does!</h4>
     </div>
 
@@ -116,6 +142,7 @@ Project Description: ...
     
     <div id="mainContainer">
         <div class="teams">
+            <br>
             Teams:
             <br>
             <ul id="teamList">
@@ -141,11 +168,11 @@ Project Description: ...
         </div>
     </div>
     <div id="basketballImg">
-        <img src="/Basketball Images/ncaa logo image.png" alt="NCAA">
-        <img src="/Basketball Images/plain basketball.png" alt="Basketball">
+        <img id="ncaaImg" src="/Basketball Images/ncaa logo image.png" alt="NCAA">
+        <img id="ballImg" src="/Basketball Images/plain basketball.png" alt="Basketball">
     </div>
     <footer>
-        Footer Test
+        &copy; BYU NCAA Association 2020
     </footer>
 
     <script>
