--- a/project2.html
+++ b/project2.html
@@ -38,6 +38,11 @@ Project Description: ...
             font-weight: bolder;
         }
 
+        #intro h1
+        {
+            font-size: 40px;
+        }
+
         #mainContainer
         {
             overflow: auto;
@@ -56,7 +61,7 @@ Project Description: ...
             padding: 10px;
             float: left;
             display: block;
-            height: 40%;
+            min-height: 50%;
         }
 
         #teamList
@@ -98,7 +103,7 @@ Project Description: ...
             padding: 10px;
             float: left;
             display: block;
-            height: 40%;
+            min-height: 50%;
             
         }
 
