--- a/project2.html
+++ b/project2.html
@@ -4,7 +4,7 @@
     Jarod Jones
     Jesse Buhler
     Joshua Card
-    Zachary Sterling 
+    Zachary Sterling
     Brita Szymanski
 
 Project 2 - Work as a Team
@@ -62,6 +62,7 @@ Project Description: ...
             float: left;
             display: block;
             min-height: 50%;
+            height: fit-content;
         }
 
         #teamList
@@ -104,7 +105,7 @@ Project Description: ...
             float: left;
             display: block;
             min-height: 50%;
-            
+            height: fit-content;
         }
 
         #ballImg
@@ -165,7 +166,7 @@ Project Description: ...
         </div>
 
         <!--<br><br-->
-        <input type="button" value="Play Game" onclick="playGame()" id="inputButton">
+        <input type="button" value="Play Season" onclick="playGame()" id="inputButton">
         <div id="rightSide">
             <!--<br><br>-->
             <p>Season Results:</p>
